yaml-installation/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  externalIPs:
    - 193.146.75.240
  selector:
    app: jenkins
