yaml-installation/jenkins-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: jenkins-ingress
  namespace: jenkins
spec: 
  rules: 
    - 
      host: www.setupjenkins.com
      http: 
        paths: 
          - 
            backend: 
              serviceName: jenkins-service
              servicePort: 8080
